# A2-OOP

./: A2_S1_20221130_3.cpp  A2_S1_20221130_5.cpp  A2_S1_20221130_9.cpp  A2_S2_20220183_20221130_12.cpp  A2_S2_20220183_4.cpp  A2_S2_20220443_6a.cpp  A2_S2_20220443_6b.cpp  A2_S2_20220443_8.cpp  File: A2_S2_20220183_1.cpp
A2_S2_20220183_10/: A2_S2_20220183_10.cpp  CMakeLists.txt  censored table.txt  in.txt  out.txt
A2_S2_20220183_11/: A2_S2_20220183_11.cpp  CMakeLists.txt  f1.txt  f2.txt
A2_S2_20220183_11a/: A2_S2_20220183_11.cpp  A2_S2_20220183_11a.cpp  CMakeLists.txt  f1.txt  f2.txt
A2_S2_20220183_20220443_7/: A2_S2_20220183_20220443_7.cpp  CMakeLists.txt  domino.cpp  domino.h
A2_S2_20220183_7/: A2_S2_20220183_7.cpp  A2_S2_20220183_7a.cpp  CMakeLists.txt  domino.cpp  domino.h
A2_S2_20220443_2/: A2_S2_20220443_2.cpp  CMakeLists.txt  InclusiveSpeech.cpp  InclusiveSpeech.h
A2_Task2_S2_20220443_20220183_20221130/: BigReal.cpp  BigReal.h  CMakeLists.txt  main.cpp
Machine Language/: CMakeLists.txt  VoleMachine.cpp  VoleMachine.h  main.cpp  program.txt
