cmake_minimum_required(VERSION 3.26)
project(A2_files)

set(CMAKE_CXX_STANDARD 23)

add_executable(A2_files
        A2_S2_20220443_2/A2_S2_20220443_2.cpp
        A2_S2_20220443_2/A2_S2_20220443_2.cpp
        A2_S2_20220443_8.cpp
        A2_S2_20220443_6b.cpp
        A2_S2_20220443_6a.cpp
        A2_S2_20220183_20220443_7.cpp
        domino.cpp
        ../A2_S2_20220183_20220443_7/domino.h
        ../A2_S2_20220183_20220443_7/domino.h

)
